fix: breakpoint 1px gap issue

--- a/src/app/core-ui/main-header/main-header.component.scss
+++ b/src/app/core-ui/main-header/main-header.component.scss
@@ -66,7 +66,7 @@ button {
 
 
 .burger-trigger {
-  @media (min-width: $navBpReduceToBurger+1) {
+  @media (min-width: $navBpReduceToBurger +1) {
     display: none;
   }
 }
@@ -88,7 +88,7 @@ button {
   }
 
   &.isHideNav {
-    @media(min-width: $navBp2Lines) {
+    @media(min-width: $navBp2Lines +1) {
       transition: $transition-standard;
       opacity: 0;
       .wrapper:hover & {
@@ -160,7 +160,7 @@ button {
   display: none;
   flex: 1 1 auto;
 
-  @media(max-width: $navBpShrinking) and (min-width: $navBp2Lines) {
+  @media(max-width: $navBpShrinking) and (min-width: $navBp2Lines +1) {
     display: none;
   }
 }
